# MilitaryOperationsResearchRecipes

./: LICENSE  README.md  localization.py  optimal-searach.py  optimal-search.py  pyproject.toml  test_linProgramming.py  test_optResearch.py  transportStorage.py  transportation.py
.github/workflows/: testopresearch.yml  testoptres.yml
code/: hmmGraph.dot  localization.py  pyproject.toml  southNorthAttack.py  test_hmm.py  test_linProgramming.py  test_opResearch.py  transportStorage.py
docs/img/: attackGuess.xcf  regions_interlaken.xcf  transStore.xcf  transportation.xcf  transportation2.xcf  transportation3.xcf
